manifests/tweetsvg.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tweetsvg
---
apiVersion: v1
kind: Service
metadata:
  name: tweetsvg
  namespace: tweetsvg
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: web
  selector:
    app: tweetsvg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweetsvg
  namespace: tweetsvg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tweetsvg
  template:
    metadata:
      labels:
        app: tweetsvg
    spec:
      containers:
      - name: web
        image: docker.cluster.fun/averagemarcus/tweetsvg:latest
        imagePullPolicy: Always
        # env:
        # - name: DOTENV_DIR
        #   value: /config/
        ports:
        - containerPort: 8080
          name: web
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 100Mi
        volumeMounts:
          - name: dotenv
            mountPath: /app/.env
            subPath: .env
      volumes:
      - name: dotenv
        secret:
          secretName: tweetsvg
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tweetsvg
  namespace: tweetsvg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - tweet.cluster.fun
    secretName: tweetsvg-ingress
  rules:
  - host: tweet.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tweetsvg
            port:
              number: 80
